// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConsultationList > should match snapshot after loading 1`] = `
<div>
  <section
    class="mt-4"
  >
    <div
      class="w-full"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="sr-only"
      >
        
      </div>
       
      <div
        class="flex justify-between items-center gap-2 pb-4 pt-2 svelte-e9ladz"
      >
        <div
          class="flex flex-col gap-1"
        >
          <label
            class="sr-only svelte-ekj0e2"
            data-melt-combobox-label=""
            for="data-table-visible-columns-select"
            id="data-table-visible-columns-select-label"
          >
            <span
              class="text-sm font-medium text-neutral-900"
            >
              Visible columns
            </span>
          </label>
           
          <div
            class="relative"
          >
            <div
              class="absolute left-2 top-1/2 -translate-y-1/2"
            >
              <svg
                aria-hidden="true"
                class="fill-neutral-400"
                height="1rem"
                viewBox="0 -960 960 960"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <!---->
                <path
                  d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"
                  xmlns="http://www.w3.org/2000/svg"
                />
                <!---->
              </svg>
              <!---->
            </div>
             
            <input
              aria-autocomplete="list"
              aria-controls="data-table-visible-columns-select-menu"
              aria-expanded="false"
              aria-labelledby="data-table-visible-columns-select-label"
              autocomplete="off"
              class="w-full leading-8 flex items-center justify-between rounded-sm bg-white px-3 pr-12 text-black border border-neutral-300 pl-8 svelte-ekj0e2"
              data-melt-combobox-input=""
              data-melt-combobox-trigger=""
              data-state="closed"
              id="data-table-visible-columns-select"
              placeholder="5 columns visible"
              role="combobox"
            />
             
            <div
              class="absolute right-2 top-1/2 z-10 -translate-y-1/2 text-neutral-900 transition-transform -rotate-90 pointer-events-none svelte-ekj0e2"
            >
              <svg
                aria-hidden="true"
                class="fill-neutral-700"
                height="1rem"
                viewBox="0 -960 960 960"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <!---->
                <path
                  d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"
                />
                <!---->
              </svg>
              <!---->
            </div>
            <!---->
          </div>
        </div>
         
        <!---->
        <!---->
         
        <div
          class="w-1/3 ml-auto text-sm svelte-e9ladz"
        >
          <div
            class="relative"
          >
            <label
              class="sr-only"
              for="data-table-search-input"
            >
              Search
            </label>
             
            <input
              class="h-9 w-full p-1 border border-gray-300 rounded-xs focus:outline-2 focus:outline-yellow-300 pl-8 pr-4 svelte-1auzwdn"
              id="data-table-search-input"
              placeholder="Search..."
              type="text"
            />
             
            <!---->
             
            <div
              class="absolute left-2 top-1/2 mt-0.5 -translate-y-1/2 transform"
            >
              <svg
                aria-hidden="true"
                class="fill-neutral-400"
                height="1.2rem"
                viewBox="0 -960 960 960"
                width="1.2rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <!---->
                <path
                  d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"
                  xmlns="http://www.w3.org/2000/svg"
                />
                <!---->
              </svg>
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
       
      <div
        class="max-h-[50rem] overflow-x-auto rounded-lg border border-neutral-200 bg-white svelte-e9ladz"
      >
        <table
          class="min-w-full divide-y divide-neutral-200 svelte-e9ladz"
        >
          <caption
            class="sr-only"
          >
            Data table
          </caption>
          <!---->
          <thead
            class="bg-neutral-50"
          >
            <tr>
              <th
                aria-sort="none"
                class="px-4 py-3 text-left text-xs font-[500] tracking-wide text-neutral-600 svelte-e9ladz"
                data-testid="column-header"
                scope="col"
              >
                <!---->
                <button
                  aria-label="Sort by Name"
                  aria-pressed="false"
                  class="text-xs cursor-pointer rounded-md py-0.5 px-1 border text-start border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                  data-variant="ghost"
                  role="button"
                  tabindex="0"
                >
                  <!---->
                  <!---->
                  <span>
                    Name
                  </span>
                   
                  <span
                    aria-hidden="true"
                    class="text-neutral-400"
                  >
                    <svg
                      aria-hidden="true"
                      class="fill-neutral-500"
                      height="1rem"
                      viewBox="0 -960 960 960"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <!---->
                      <path
                        d="M320-440v-287L217-624l-57-56 200-200 200 200-57 56-103-103v287h-80ZM600-80 400-280l57-56 103 103v-287h80v287l103-103 57 56L600-80Z"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      <!---->
                    </svg>
                    <!---->
                  </span>
                  
                  
                  
                </button>
                
                <!---->
              </th>
              <th
                aria-sort="none"
                class="px-4 py-3 text-left text-xs font-[500] tracking-wide text-neutral-600 svelte-e9ladz"
                data-testid="column-header"
                scope="col"
              >
                <!---->
                <button
                  aria-label="Sort by Date Created"
                  aria-pressed="false"
                  class="text-xs cursor-pointer rounded-md py-0.5 px-1 border text-start border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                  data-variant="ghost"
                  role="button"
                  tabindex="0"
                >
                  <!---->
                  <!---->
                  <span>
                    Date Created
                  </span>
                   
                  <span
                    aria-hidden="true"
                    class="text-neutral-400"
                  >
                    <svg
                      aria-hidden="true"
                      class="fill-neutral-500"
                      height="1rem"
                      viewBox="0 -960 960 960"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <!---->
                      <path
                        d="M320-440v-287L217-624l-57-56 200-200 200 200-57 56-103-103v287h-80ZM600-80 400-280l57-56 103 103v-287h80v287l103-103 57 56L600-80Z"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      <!---->
                    </svg>
                    <!---->
                  </span>
                  
                  
                  
                </button>
                
                <!---->
              </th>
              <th
                aria-sort="none"
                class="px-4 py-3 text-left text-xs font-[500] tracking-wide text-neutral-600 svelte-e9ladz"
                data-testid="column-header"
                scope="col"
              >
                <span>
                  Evaluation
                </span>
                <!---->
              </th>
              <th
                aria-sort="none"
                class="px-4 py-3 text-left text-xs font-[500] tracking-wide text-neutral-600 svelte-e9ladz"
                data-testid="column-header"
                scope="col"
              >
                <span>
                  Themes
                </span>
                <!---->
              </th>
              <th
                aria-sort="none"
                class="px-4 py-3 text-left text-xs font-[500] tracking-wide text-neutral-600 svelte-e9ladz"
                data-testid="column-header"
                scope="col"
              >
                <span>
                  Dashboard
                </span>
                <!---->
              </th>
              
            </tr>
          </thead>
          <tbody
            class="divide-y divide-neutral-200"
          >
            <!---->
            <tr
              class="transition-colors hover:bg-neutral-50 svelte-e9ladz"
              data-testid="datatable-row"
            >
              <td
                class="whitespace-nowrap px-4 py-3 text-sm text-neutral-700 svelte-e9ladz"
              >
                <!---->
                <!---->
                <span>
                  Dummy Consultation at Analysis Stage
                </span>
                
                
                <!---->
              </td>
              <td
                class="whitespace-nowrap px-4 py-3 text-sm text-neutral-700 svelte-e9ladz"
              >
                <!---->
                <!---->
                <span>
                  1/29/2026
                </span>
                
                
                <!---->
              </td>
              <td
                class="whitespace-nowrap px-4 py-3 text-sm text-neutral-700 svelte-e9ladz"
              >
                <!---->
                <!---->
                <!---->
                <a
                  aria-label="View Evaluation for Dummy Consultation at Analysis Stage"
                  class="transition-colors duration-300 text-primary hover:underline"
                  data-testid="View Evaluation for Dummy Consultation at Analysis Stage"
                  href="/evaluations/95ab7567-9381-48eb-8d20-ddeb43691b58/questions/"
                  role="button"
                  tabindex="0"
                  title=""
                >
                  <!---->
                  View Evaluation
                  
                  
                </a>
                
                
                
                <!---->
              </td>
              <td
                class="whitespace-nowrap px-4 py-3 text-sm text-neutral-700 svelte-e9ladz"
              >
                <!---->
                <!---->
                <!---->
                <a
                  aria-label="Finalise Themes for Dummy Consultation at Analysis Stage"
                  class="transition-colors duration-300 text-primary hover:underline"
                  data-testid="Finalise Themes for Dummy Consultation at Analysis Stage"
                  href="/consultations/95ab7567-9381-48eb-8d20-ddeb43691b58/finalising-themes"
                  role="button"
                  tabindex="0"
                  title=""
                >
                  <!---->
                  Finalise Themes
                  
                  
                </a>
                
                
                
                <!---->
              </td>
              <td
                class="whitespace-nowrap px-4 py-3 text-sm text-neutral-700 svelte-e9ladz"
              >
                <!---->
                <!---->
                <!---->
                <a
                  aria-label="View Dashboard for Dummy Consultation at Analysis Stage"
                  class="transition-colors duration-300 text-primary hover:underline"
                  data-testid="View Dashboard for Dummy Consultation at Analysis Stage"
                  href="/consultations/95ab7567-9381-48eb-8d20-ddeb43691b58"
                  role="button"
                  tabindex="0"
                  title=""
                >
                  <!---->
                  View Dashboard
                  
                  
                </a>
                
                
                
                <!---->
              </td>
              
            </tr>
            <tr
              class="transition-colors hover:bg-neutral-50 svelte-e9ladz"
              data-testid="datatable-row"
            >
              <td
                class="whitespace-nowrap px-4 py-3 text-sm text-neutral-700 svelte-e9ladz"
              >
                <!---->
                <!---->
                <span>
                  Dummy Consultation at Finalising Themes Stage
                </span>
                
                
                <!---->
              </td>
              <td
                class="whitespace-nowrap px-4 py-3 text-sm text-neutral-700 svelte-e9ladz"
              >
                <!---->
                <!---->
                <span>
                  1/29/2026
                </span>
                
                
                <!---->
              </td>
              <td
                class="whitespace-nowrap px-4 py-3 text-sm text-neutral-700 svelte-e9ladz"
              >
                <!---->
                <!---->
                <!---->
                <a
                  aria-label="View Evaluation for Dummy Consultation at Finalising Themes Stage"
                  class="transition-colors duration-300 text-primary hover:underline"
                  data-testid="View Evaluation for Dummy Consultation at Finalising Themes Stage"
                  href="/evaluations/4d1414d5-9300-447b-b788-50d0bef7e807/questions/"
                  role="button"
                  tabindex="0"
                  title=""
                >
                  <!---->
                  View Evaluation
                  
                  
                </a>
                
                
                
                <!---->
              </td>
              <td
                class="whitespace-nowrap px-4 py-3 text-sm text-neutral-700 svelte-e9ladz"
              >
                <!---->
                <!---->
                <!---->
                <a
                  aria-label="Finalise Themes for Dummy Consultation at Finalising Themes Stage"
                  class="transition-colors duration-300 text-primary hover:underline"
                  data-testid="Finalise Themes for Dummy Consultation at Finalising Themes Stage"
                  href="/consultations/4d1414d5-9300-447b-b788-50d0bef7e807/finalising-themes"
                  role="button"
                  tabindex="0"
                  title=""
                >
                  <!---->
                  Finalise Themes
                  
                  
                </a>
                
                
                
                <!---->
              </td>
              <td
                class="whitespace-nowrap px-4 py-3 text-sm text-neutral-700 svelte-e9ladz"
              >
                <!---->
                <!---->
                <!---->
                <a
                  aria-label="View Dashboard for Dummy Consultation at Finalising Themes Stage"
                  class="transition-colors duration-300 text-primary hover:underline"
                  data-testid="View Dashboard for Dummy Consultation at Finalising Themes Stage"
                  href="/consultations/4d1414d5-9300-447b-b788-50d0bef7e807"
                  role="button"
                  tabindex="0"
                  title=""
                >
                  <!---->
                  View Dashboard
                  
                  
                </a>
                
                
                
                <!---->
              </td>
              
            </tr>
            
            <!---->
          </tbody>
        </table>
      </div>
    </div>
     
    <div
      class="mt-4 flex flex-wrap items-center justify-between gap-4 svelte-e9ladz"
    >
      <p
        class="text-sm text-neutral-600 svelte-e9ladz"
        data-testid="visible-items-text"
      >
        Showing 
        <span
          class="font-medium text-neutral-900"
        >
          1
        </span>
         - 
        <span
          class="font-medium text-gray-900 svelte-e9ladz"
        >
          2
        </span>
         of 
        <span
          class="font-medium text-neutral-900"
        >
          2
        </span>
      </p>
       
      <div
        class="text-xs page-size-container svelte-e9ladz"
      >
        <div
          class="flex items-center gap-4"
        >
          <label
            class="mb-1 block text-base leading-5 text-neutral-900 md:text-lg md:leading-6 min-w-max"
            for="data-table-page-size-select"
          >
            Page Size
          </label>
          <!---->
           
          <!---->
           
          <!---->
           
          <select
            class="h-9 w-full rounded-xs border border-gray-300 bg-white p-1 text-neutral-700 focus:outline-2 focus:outline-yellow-300 disabled:cursor-not-allowed disabled:bg-neutral-100 disabled:text-neutral-600 disabled:opacity-50"
            id="data-table-page-size-select"
            name="data-table-page-size-select"
          >
            <option
              class="bg-white text-neutral-900"
              data-testid="data-table-page-size-select-option"
              selected=""
              value="10"
            >
              10
            </option>
            <option
              class="bg-white text-neutral-900"
              data-testid="data-table-page-size-select-option"
              value="50"
            >
              50
            </option>
            <option
              class="bg-white text-neutral-900"
              data-testid="data-table-page-size-select-option"
              value="100"
            >
              100
            </option>
            <option
              class="bg-white text-neutral-900"
              data-testid="data-table-page-size-select-option"
              value="250"
            >
              250
            </option>
            <option
              class="bg-white text-neutral-900"
              data-testid="data-table-page-size-select-option"
              value="500"
            >
              500
            </option>
            
          </select>
        </div>
        <!---->
      </div>
       
      <nav
        aria-label="Pagination"
        class="flex items-center gap-1"
      >
        <!---->
        <button
          aria-label="Previous Page"
          aria-pressed="false"
          class="text-xs cursor-pointer rounded-md py-0.5 px-1 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 disabled disabled:bg-gray-200 disabled:text-gray-400 disabled:cursor-not-allowed disabled:hover:bg-gray-200 disabled:hover:border-gray-300 disabled:hover:text-gray-400 svelte-1d0mdzt"
          data-variant="ghost"
          disabled=""
          role="button"
          tabindex="0"
        >
          <!---->
          <!---->
          Previous
          
          
          
        </button>
        
        <!---->
         
        <span
          aria-current="page"
          class="px-2 text-xs text-neutral-600"
          data-testid="current-page"
        >
          Page 1 of 1
        </span>
         
        <!---->
        <button
          aria-label="Next Page"
          aria-pressed="false"
          class="text-xs cursor-pointer rounded-md py-0.5 px-1 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 disabled disabled:bg-gray-200 disabled:text-gray-400 disabled:cursor-not-allowed disabled:hover:bg-gray-200 disabled:hover:border-gray-300 disabled:hover:text-gray-400 svelte-1d0mdzt"
          data-variant="ghost"
          disabled=""
          role="button"
          tabindex="0"
        >
          <!---->
          <!---->
          Next
          
          
          
        </button>
        
        <!---->
      </nav>
    </div>
    <!---->
    <!---->
  </section>
  
</div>
`;

exports[`ConsultationList > should match snapshot initially 1`] = `
<div>
  <section
    class="mt-4"
  >
    <div
      class="w-full"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="sr-only"
      >
        
      </div>
       
      <div
        class="flex justify-between items-center gap-2 pb-4 pt-2 svelte-e9ladz"
      >
        <div
          class="flex flex-col gap-1"
        >
          <label
            class="sr-only svelte-ekj0e2"
            data-melt-combobox-label=""
            for="data-table-visible-columns-select"
            id="data-table-visible-columns-select-label"
          >
            <span
              class="text-sm font-medium text-neutral-900"
            >
              Visible columns
            </span>
          </label>
           
          <div
            class="relative"
          >
            <div
              class="absolute left-2 top-1/2 -translate-y-1/2"
            >
              <svg
                aria-hidden="true"
                class="fill-neutral-400"
                height="1rem"
                viewBox="0 -960 960 960"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <!---->
                <path
                  d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"
                  xmlns="http://www.w3.org/2000/svg"
                />
                <!---->
              </svg>
              <!---->
            </div>
             
            <input
              aria-autocomplete="list"
              aria-controls="data-table-visible-columns-select-menu"
              aria-expanded="false"
              aria-labelledby="data-table-visible-columns-select-label"
              autocomplete="off"
              class="w-full leading-8 flex items-center justify-between rounded-sm bg-white px-3 pr-12 text-black border border-neutral-300 pl-8 svelte-ekj0e2"
              data-melt-combobox-input=""
              data-melt-combobox-trigger=""
              data-state="closed"
              id="data-table-visible-columns-select"
              placeholder="5 columns visible"
              role="combobox"
            />
             
            <div
              class="absolute right-2 top-1/2 z-10 -translate-y-1/2 text-neutral-900 transition-transform -rotate-90 pointer-events-none svelte-ekj0e2"
            >
              <svg
                aria-hidden="true"
                class="fill-neutral-700"
                height="1rem"
                viewBox="0 -960 960 960"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <!---->
                <path
                  d="M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z"
                />
                <!---->
              </svg>
              <!---->
            </div>
            <!---->
          </div>
        </div>
         
        <!---->
        <!---->
         
        <div
          class="w-1/3 ml-auto text-sm svelte-e9ladz"
        >
          <div
            class="relative"
          >
            <label
              class="sr-only"
              for="data-table-search-input"
            >
              Search
            </label>
             
            <input
              class="h-9 w-full p-1 border border-gray-300 rounded-xs focus:outline-2 focus:outline-yellow-300 pl-8 pr-4 svelte-1auzwdn"
              id="data-table-search-input"
              placeholder="Search..."
              type="text"
            />
             
            <!---->
             
            <div
              class="absolute left-2 top-1/2 mt-0.5 -translate-y-1/2 transform"
            >
              <svg
                aria-hidden="true"
                class="fill-neutral-400"
                height="1.2rem"
                viewBox="0 -960 960 960"
                width="1.2rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <!---->
                <path
                  d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"
                  xmlns="http://www.w3.org/2000/svg"
                />
                <!---->
              </svg>
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
       
      <div
        class="max-h-[50rem] overflow-x-auto rounded-lg border border-neutral-200 bg-white svelte-e9ladz"
      >
        <table
          class="min-w-full divide-y divide-neutral-200 svelte-e9ladz"
        >
          <caption
            class="sr-only"
          >
            Data table
          </caption>
          <!---->
          <thead
            class="bg-neutral-50"
          >
            <tr>
              <th
                aria-sort="none"
                class="px-4 py-3 text-left text-xs font-[500] tracking-wide text-neutral-600 svelte-e9ladz"
                data-testid="column-header"
                scope="col"
              >
                <!---->
                <button
                  aria-label="Sort by Name"
                  aria-pressed="false"
                  class="text-xs cursor-pointer rounded-md py-0.5 px-1 border text-start border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                  data-variant="ghost"
                  role="button"
                  tabindex="0"
                >
                  <!---->
                  <!---->
                  <span>
                    Name
                  </span>
                   
                  <span
                    aria-hidden="true"
                    class="text-neutral-400"
                  >
                    <svg
                      aria-hidden="true"
                      class="fill-neutral-500"
                      height="1rem"
                      viewBox="0 -960 960 960"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <!---->
                      <path
                        d="M320-440v-287L217-624l-57-56 200-200 200 200-57 56-103-103v287h-80ZM600-80 400-280l57-56 103 103v-287h80v287l103-103 57 56L600-80Z"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      <!---->
                    </svg>
                    <!---->
                  </span>
                  
                  
                  
                </button>
                
                <!---->
              </th>
              <th
                aria-sort="none"
                class="px-4 py-3 text-left text-xs font-[500] tracking-wide text-neutral-600 svelte-e9ladz"
                data-testid="column-header"
                scope="col"
              >
                <!---->
                <button
                  aria-label="Sort by Date Created"
                  aria-pressed="false"
                  class="text-xs cursor-pointer rounded-md py-0.5 px-1 border text-start border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                  data-variant="ghost"
                  role="button"
                  tabindex="0"
                >
                  <!---->
                  <!---->
                  <span>
                    Date Created
                  </span>
                   
                  <span
                    aria-hidden="true"
                    class="text-neutral-400"
                  >
                    <svg
                      aria-hidden="true"
                      class="fill-neutral-500"
                      height="1rem"
                      viewBox="0 -960 960 960"
                      width="1rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <!---->
                      <path
                        d="M320-440v-287L217-624l-57-56 200-200 200 200-57 56-103-103v287h-80ZM600-80 400-280l57-56 103 103v-287h80v287l103-103 57 56L600-80Z"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      <!---->
                    </svg>
                    <!---->
                  </span>
                  
                  
                  
                </button>
                
                <!---->
              </th>
              <th
                aria-sort="none"
                class="px-4 py-3 text-left text-xs font-[500] tracking-wide text-neutral-600 svelte-e9ladz"
                data-testid="column-header"
                scope="col"
              >
                <span>
                  Evaluation
                </span>
                <!---->
              </th>
              <th
                aria-sort="none"
                class="px-4 py-3 text-left text-xs font-[500] tracking-wide text-neutral-600 svelte-e9ladz"
                data-testid="column-header"
                scope="col"
              >
                <span>
                  Themes
                </span>
                <!---->
              </th>
              <th
                aria-sort="none"
                class="px-4 py-3 text-left text-xs font-[500] tracking-wide text-neutral-600 svelte-e9ladz"
                data-testid="column-header"
                scope="col"
              >
                <span>
                  Dashboard
                </span>
                <!---->
              </th>
              
            </tr>
          </thead>
          <tbody
            class="divide-y divide-neutral-200"
          >
            <tr>
              <td
                class="px-4 py-12 text-center text-sm text-neutral-500 svelte-e9ladz"
                colspan="5"
              >
                <div
                  role="status"
                >
                  <div
                    class="animate-spin ease-in-out w-max m-auto"
                    data-testid="loading-indicator"
                    style="animation-timing-function: ease-in-out;"
                  >
                    <svg
                      aria-hidden="true"
                      class="fill-neutral-300"
                      height="3rem"
                      viewBox="0 -960 960 960"
                      width="3rem"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <!---->
                      <path
                        d="M480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-155.5t86-127Q252-817 325-848.5T480-880q17 0 28.5 11.5T520-840q0 17-11.5 28.5T480-800q-133 0-226.5 93.5T160-480q0 133 93.5 226.5T480-160q133 0 226.5-93.5T800-480q0-17 11.5-28.5T840-520q17 0 28.5 11.5T880-480q0 82-31.5 155t-86 127.5q-54.5 54.5-127 86T480-80Z"
                        xmlns="http://www.w3.org/2000/svg"
                      />
                      <!---->
                    </svg>
                    <!---->
                  </div>
                  <!---->
                   Loading consultations...
                </div>
                <!---->
              </td>
            </tr>
            <!---->
          </tbody>
        </table>
      </div>
    </div>
     
    <!---->
    <!---->
  </section>
  
</div>
`;
